# self_training_collapse

./: README.md
self_training_collapse/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
self_training_collapse/configs/: care_default.yaml  es_default.yaml  grpo_default.yaml
self_training_collapse/docs/: API.md  CITATIONS.bib  THEORY.md
self_training_collapse/notebooks/: 00_overview.ipynb  01_run_chains.ipynb  02_evaluate.ipynb
self_training_collapse/scripts/: figure1_diagnostic.py  figure3_campaign_trajectories.py  generate_all_figures.py  run_care_chain.py  run_diagnostic.py  run_es_chain.py  run_grpo_chain.py
self_training_collapse/src/: __init__.py
self_training_collapse/src/care/: __init__.py  gate.py  memory.py  orchestrator.py  revision.py
self_training_collapse/src/evaluation/: capability_tracker.py  codegrader.py  pass_at_k.py
self_training_collapse/src/experiments/: base_experiment.py  care_chain.py  diagnostic.py  es_chain.py  grpo_chain.py
self_training_collapse/src/models/: __init__.py  checkpoint.py  model_loader.py  trainer.py
self_training_collapse/src/utils/: config.py  logging.py  visualization.py
self_training_collapse/tests/: test_care_core.py
