[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "self-training-collapse"
version = "0.1.0"
description = "A reproducible implementation of the CARE framework for self-training collapse studies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
  "PyYAML>=6.0.0",
  "pydantic>=2.0.0",
]
